<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="1dp"
        android:background="@android:drawable/bottom_bar">
        <!-- 餐桌編號 -->
	    <TextView
	        android:id="@+id/tables_id"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="48sp"
	        android:textColor="#000"
	        android:padding="5sp"
	        android:gravity="center"
	        android:text="0" />
	    <TableLayout 
	        android:stretchColumns="1,3"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:padding="5sp">
	        <TableRow>
	            <TextView
	                android:text="@string/change_table_confirm_orders_id_txt" 
	                android:textColor="#000" />
                <!-- 訂單編號 -->
	            <TextView
	                android:id="@+id/orders_id"
	                android:textColor="#000"
	                android:text="" />
	            <TextView
	                android:text="@string/change_table_confirm_number_txt" 
	                android:textColor="#000" />
                <!-- 人數 -->
	            <TextView
	                android:id="@+id/orders_number"
	                android:textColor="#000"
	                android:text="" />            
	        </TableRow>
	        <TableRow>
	            <TextView
	                android:text="@string/change_table_confirm_time_txt" 
	                android:textColor="#000" />
                <!-- 日期時間 -->
	            <TextView
	                android:id="@+id/orders_time"
	                android:layout_span="3"
	                android:textColor="#000"
	                android:text="" />            
	        </TableRow>
	        <TableRow>
	            <TextView
	                android:text="@string/change_table_confirm_username_txt" 
	                android:textColor="#000" />
                <!-- 使用者名稱 -->
	            <TextView
	                android:id="@+id/orders_user_name"
	                android:layout_span="3"
	                android:textColor="#000"
	                android:text="" />
	        </TableRow>
	    </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="1dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="3sp"
	        android:text="@string/change_table_confirm_select_table_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        <!-- 選擇餐桌 -->
	    <Spinner
	        android:id="@+id/empty_tables"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="3sp"
	        android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="1dp"
        android:background="@android:drawable/bottom_bar">
        <!-- 取消 -->
        <Button
            android:id="@+id/change_table_confirm_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <!-- 確定 -->
        <Button
            android:id="@+id/change_table_confirm_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@android:string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium" />        
    </LinearLayout>    
</LinearLayout>




